Fix pre line wrapping in demo

--- a/demo/styles/common.scss
+++ b/demo/styles/common.scss
@@ -1,3 +1,21 @@
+pre {
+  background-color: #eeeeee;
+  border: 1px solid gray;
+  border-radius: 4px;
+  font-family: Consolas, 'Courier New', monospace;
+  font-size: small;
+  padding: 1rem;
+
+  &#formatQuery-output {
+    min-width: 405px;
+    white-space: pre-wrap;
+  }
+}
+
+.queryBuilder {
+  min-width: 405px;
+}
+
 .useValidation {
   // Bold the +Rule button if the group has no child rules or groups
   .ruleGroup.queryBuilder-invalid .ruleGroup-addRule {
